--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,11 @@
 body {
   background: rgb(200, 200, 200)
 }
+
+#mycanvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
